--- a/ex02.css
+++ b/ex02.css
@@ -46,6 +46,9 @@ footer {
 
 body {
     background-color: #ddd;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 main {
@@ -59,7 +62,9 @@ main {
     margin-top: 25px;
     border-radius: 10px;
     margin-bottom: 40px;
+    flex: 1 0 auto;
 }
+
 .noticiap img {
     -webkit-box-shadow: 1px 1px 13px 4px #808080; 
     box-shadow: 1px 1px 13px 4px #808080;
@@ -104,6 +109,7 @@ main {
 .menu-ativo {
     display: block;
 }
+
 @media (max-width: 1024px) {
   main {
     width: 75vw;
@@ -177,7 +183,7 @@ main {
   }
 
   .icone-menu {
-    display: flex;
+    display:flex
   }
 }
 
